src/test/ui/rfc-2091-track-caller/error-with-invalid-abi.stderr
error[E0737]: `#[track_caller]` requires Rust ABI
  --> $DIR/error-with-invalid-abi.rs:3:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0737`.
